# PaceGenie

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py  test_graph.py  test_mock_quality.py
.github/workflows/: ci.yml  deploy.yml
agent/: config.py  graph.py  nodes.py  state.py  tools.py  utils.py
api/: main.py
data/: mock_garmin.json
data/knowledge/: heart_rate_training.md  injury_prevention.md  marathon_training_plans.md  nutrition_for_runners.md  pace_zones.md  race_preparation.md  recovery_protocols.md  training_principles.md  vo2max_and_intervals.md
evaluation/: METRICS_REPORT.md  ablation.py  langsmith_eval.py  metrics.py  personalization_score.py  pilot_test.py  run_ablation.py  run_agent.py  run_judges.py  test_queries.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/data/: mock_garmin.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/dashboard/: Dashboard.tsx  HRChart.tsx  HRStatsCard.tsx  HeartRateChart.tsx  InjuryHistory.tsx  LatestRunCard.tsx  PBCard.tsx  PacePredictor.tsx  ProfileCard.tsx  RaceCard.tsx  RunHistory.tsx  RunsTable.tsx  UserProfile.tsx  VolumeChart.tsx  WeeklyCard.tsx  WeeklySummary.tsx  ZoneCard.tsx  ZoneDistributionChart.tsx
frontend/src/lib/: config.ts  utils.ts
frontend/src/types/: index.ts
rag/: embeddings.py  ingest.py  retriever.py
scripts/: load_test.py
tests/: conftest.py  test_fixes.py  test_graph.py  test_mock_quality.py
