[project]
name = "pacegenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=3.1.3",
    "fastapi>=0.135.1",
    "gradio>=6.9.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]